[gd_scene load_steps=2 format=3 uid="uid://fingerpaintgame"]

[ext_resource type="Script" path="res://scripts/FingerPaintGame.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.95, 0.95, 1, 1)

[node name="FingerPaintGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.95, 0.95, 1, 1)

[node name="GameContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="GameContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(50, 50)
text = "<"

[node name="Spacer" type="Control" parent="GameContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WayangMascot" type="AnimatedSprite2D" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(60, 60)

[node name="GameContent" type="Control" parent="GameContainer"]
layout_mode = 2
size_flags_vertical = 3
